--- a/technical.tex
+++ b/technical.tex
@@ -59,7 +59,8 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \vspace{-0.2cm}
 \begin{tabular}{L{0.05cm} L{5cm} l}
 &Languages     &\textbf{C/C++}, \textbf{Java(Basic)},\textbf{Python(Basic)}\\
-&Operating Systems/Tools     &\textbf{Linux}, \textbf{Windows}, \textbf{Bash}\\
+&Operating Systems     &\textbf{Linux}, \textbf{Windows}\\
+&Tools &\textbf{Bash}, \textbf{Git}, \textbf{\LaTeX}\\
 \end{tabular}
 \vspace{-0.4cm}
 
@@ -72,6 +73,7 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 & Real Analysis
 
 \end{tabular}
+\vspace{-0.5cm}
 
 \section*{Position Of Responsibility}
 \vspace{-0.1cm}
