Changed max rating

--- a/technical.tex
+++ b/technical.tex
@@ -46,7 +46,7 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \vspace{-0.4cm}
 \section*{Programming Achievements}
 \begin{itemize}
-\item \textbf{Expert(Blue)} with current rating of 1766 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
+\item \textbf{Expert(Blue)} with maximum rating of 1766 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
 \item Ranked \textbf{266th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 25,000 active Indian users in short contests
 \item Ranked \textbf{191th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 13,000 active Indian users in long contests
 \item Advanced to Round 2 of Facebook Hackercup 2016
