--- a/master.tex
+++ b/master.tex
@@ -41,6 +41,7 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \item Acquired \textbf{250 marks} out of 360 in \textbf{Joint Entrance Exam(Main)} 2014      	\hfill \textit{2014}\vspace{0.1cm}
 \item Scored perfect \textbf{100 marks in Mathematics} in AISSCE conducted by CBSE \hfill \textit{2014}\vspace{0.1cm}
 
+
 \end{itemize}
 \vspace{-0.4cm}
 \section*{Programming Achievements}
@@ -48,7 +49,7 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \item \textbf{Expert(Blue)} with maximum rating of 1766 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
 \item Ranked \textbf{266th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 25,000 active Indian users in short contests
 \item Ranked \textbf{191th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 13,000 active Indian users in long contests
-\item Advanced to Round 2 of Facebook Hackercup 2015
+\item Advanced to Round 2 of Facebook Hackercup 2016
 \item Solved more than 100 problems on \href{http://www.spoj.com/users/swastik1996/} {\textbf{Spoj}} (Sphere online Judge)
 \item \href{https://www.hackerearth.com/june-circuits/leaderboard/} {Ranked 7th} in June Circuits on Hackerearth among more than 1000 participants 
 \item Helped in setting and testing problems for IOPC 2016 (organized by IIT Kanpur)
@@ -73,11 +74,13 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \end{itemize}
 \vspace{-0.4cm}
 
+
 \section*{Technical Skills}
 \vspace{-0.2cm}
 \begin{tabular}{L{0.05cm} L{5cm} l}
 &Languages     &\textbf{C/C++}, \textbf{Java(Basic)},\textbf{Python(Basic)}\\
-&Operating Systems/Tools     &\textbf{Linux}, \textbf{Windows}, \textbf{Bash}\\
+&Operating Systems     &\textbf{Linux}, \textbf{Windows}\\
+&Tools &\textbf{Bash}, \textbf{Git}, \textbf{\LaTeX}\\
 \end{tabular}
 \vspace{-0.4cm}
 
