--- a/technical.tex
+++ b/technical.tex
@@ -27,7 +27,7 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \section*{Educational Qualifications}
 \vspace{-0.1cm}
 
-\textbf{\large{Bachelor of Science:}} Indian Institute of Technology, Kanpur \emph	{CPI: \textbf{8.2*/10.0} } \hfill\textit{July'14-Present}\vspace{0.1cm}\\
+\textbf{\large{Bachelor of Science:}} Indian Institute of Technology, Kanpur \emph	{CPI: \textbf{7.8*/10.0} } \hfill\textit{July'14-Present}\vspace{0.1cm}\\
 \textbf{\large{Senior Secondary - CBSE:}} Greenway Modern School, Delhi \emph{Overall percentage: \textbf{94.4\%}} \hfill\textit{2014}\vspace{0.1cm}\\
 \textbf{\large{Secondary - CBSE:}} Greenway Modern School, Delhi \emph{CGPA: \textbf{9.8/10}} \hfill\textit{2012}
 \vspace{0.1cm}\\
@@ -46,10 +46,13 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \vspace{-0.4cm}
 \section*{Programming Achievements}
 \begin{itemize}
-\item \textbf{Expert(Blue)} with maximum rating of 1766 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
-\item Ranked \textbf{161th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 25,000 active Indian users in short contests
-\item Ranked \textbf{191th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 13,000 active Indian users in long contests
-\item Advanced to Round 2 of Facebook Hackercup 2016
+\item Ranked \href{http://amrita2016.cloudcontest.org/public/}{\textbf{15th}} in ACM-ICPC Asia Amritapuri Site Regional Contest 2016(Team name - coders\_for\_fun)
+\item Ranked \href{https://icpc.baylor.edu/regionals/finder/ar-chennai-2016/standings} {\textbf{20th}} in ACM-ICPC Asia Chennai Regional Contest(Team name - coders\_for\_fun) 
+\item Ranked \href{https://www.codechef.com/rankings/ACMIND16?order=asc&page=2&sortBy=rank} {\textbf{33rd}} in ACM-ICPC India Regionals, Online Preliminary Round 2016 (Team name - coders\_for\_fun)
+\item \textbf{Expert(Blue)} with maximum rating of 1886 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
+\item Ranked \textbf{360th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 25,000 active Indian users in short contests
+\item Ranked \textbf{52nd} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 13,000 active Indian users in long contests
+\item Advanced to Round 2 of Facebook Hackercup 2016 and 2017
 \item Solved more than 100 problems on \href{http://www.spoj.com/users/swastik1996/} {\textbf{Spoj}} (Sphere online Judge)
 \item \href{https://www.hackerearth.com/june-circuits/leaderboard/} {Ranked 7th} in June Circuits on Hackerearth among more than 1000 participants 
 \item Helped in setting and testing problems for IOPC 2016 (organized by IIT Kanpur)
@@ -70,9 +73,11 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 & Fundamentals of Computing  & Linear Algebra & Mathematical Logic \vspace{0.1cm}\\
 
 & Partial Differential Equation & Probability and Statistics & Ordinary Differential Equations \vspace{0.1cm}\\
-& Real Analysis
-
+& Real Analysis & Data Structures and Algorithms & Complex Analysis \vspace{0.1cm}\\ 
+& Several Variable Calculus and Differential Geometry & Numerical Analysis* & Randomized Algorithms* \vspace{0.1cm}\\
+& Topic in Design and Analysis of Algorithms*
 \end{tabular}
+\hspace*{10cm} \hfill{* - Ongoing}
 \vspace{-0.5cm}
 
 \section*{Position Of Responsibility}
