--- a/technical.tex
+++ b/technical.tex
@@ -49,7 +49,7 @@ Indian Institute of Technology Kanpur \hfill Phone: (+91)-7755047950
 \item Ranked \href{http://amrita2016.cloudcontest.org/public/}{\textbf{15th}} in ACM-ICPC Asia Amritapuri Site Regional Contest 2016(Team name - coders\_for\_fun)
 \item Ranked \href{https://icpc.baylor.edu/regionals/finder/ar-chennai-2016/standings} {\textbf{20th}} in ACM-ICPC Asia Chennai Regional Contest(Team name - coders\_for\_fun) 
 \item Ranked \href{https://www.codechef.com/rankings/ACMIND16?order=asc&page=2&sortBy=rank} {\textbf{33rd}} in ACM-ICPC India Regionals, Online Preliminary Round 2016 (Team name - coders\_for\_fun)
-\item \textbf{Expert(Blue)} with maximum rating of 1886 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
+\item \textbf{Candidate Master(Purple)} with maximum rating of 2019 on  \href{http://codeforces.com/profile/Swastik1996} {\textbf{Codeforces}}
 \item Ranked \textbf{360th} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 25,000 active Indian users in short contests
 \item Ranked \textbf{52nd} on \href{http://codechef.com/users/Swastik1996} {\textbf{Codechef}} among 13,000 active Indian users in long contests
 \item Advanced to Round 2 of Facebook Hackercup 2016 and 2017
